// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiskStatChart renders correctly 1`] = `
<div class="period-container">
  <p class="period-container__label long-text">Custom Date Range</p>
  <p class="period-container__label short-text">Custom Range</p>
  <blackarrowexpand-stub></blackarrowexpand-stub>
  <!---->
</div>
`;

exports[`DiskStatChart renders correctly with calendar 1`] = `
<div class="period-container">
  <p class="period-container__label long-text">Custom Date Range</p>
  <p class="period-container__label short-text">Custom Range</p>
  <blackarrowhide-stub></blackarrowhide-stub>
  <payoutperiodcalendar-stub class="period-container__calendar"></payoutperiodcalendar-stub>
</div>
`;
